wip: basic repository methods

--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "description": "DynamoDB utilities",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "author": "Emerson Ap. Silverio",
+  "keywords": [],
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "jest": "jest",
     "build": "tsc"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^29.5.14",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.0.3",
     "jest": "^30.0.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.828.0"
+    "@aws-sdk/client-dynamodb": "^3.830.0",
+    "@aws-sdk/util-dynamodb": "^3.830.0"
   }
 }
