--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.3",
     "jest": "^30.0.0",
+    "ts-jest": "^29.4.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
