--- a/tsconfig.json
+++ b/tsconfig.json
@@ -114,7 +114,8 @@
     "node_modules",
     "dist",
     "src/**/*.test.ts",
-    "src/**/*.spec.ts"
+    "src/**/*.spec.ts",
+    "src/tests",
   ],
   "include": [
     "src/**/*.ts",
