Scan ddb chuncks

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@emesilver/ddb",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "DynamoDB utilities",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.3",
+    "aws-sdk-client-mock": "^4.1.0",
     "jest": "^30.0.2",
     "rimraf": "^6.0.1",
     "ts-jest": "^29.4.0",
